<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.ui.Mi_Aprendizaje.ap_frg_opciones"
    android:orientation="vertical">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/srchVw_buscarcurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_02_str2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_02_str3"/>

    <Button
        android:id="@+id/btn_apCursosVender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_02_str4"/>
    <Button
        android:id="@+id/btn_apCursosAutoaprendizaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_02_str5"/>
    <Button
        android:id="@+id/btn_apCursosOperiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_02_str6"/>
</LinearLayout>