<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ga_frgingresostock"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstringresostock1" />

    <EditText
        android:id="@+id/ga_ISedtCodSKU"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/ga_varstringresostock2"/>
    <EditText
        android:id="@+id/ga_ISedtNombreProd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/ga_varstringresostock3"/>
    <Button
        android:id="@+id/ga_ISbtnBuscarProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="buscar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstringresostock4" />
    <EditText
        android:id="@+id/ga_ISedtCantProdIng"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/ga_varstringresostock2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstringresostock5" />
    <TextView
        android:id="@+id/ga_IStxtStockActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="{stock}" />

    <Button
        android:id="@+id/ga_ISbtnRegistrarStok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstringresostock6"/>
</LinearLayout>