<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ga_frgregistrarproveedor"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor1"/>
    <DatePicker
        android:id="@+id/ga_RPdtPkFechaActual"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/ga_RPedtFechaActual"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:inputType="date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor2"/>
    <EditText
        android:id="@+id/ga_RPedtRFCProv"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <Button
        android:id="@+id/ga_RPbtnBuscarProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="buscar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor3"/>
    <EditText
        android:id="@+id/ga_RPedtNombreProv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor4"/>
    <EditText
        android:id="@+id/ga_RPedtDireccionProv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor5"/>
    <Spinner
        android:id="@+id/ga_RPspnCiudadProv"
        android:layout_width="160dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor6"/>
    <Spinner
        android:id="@+id/ga_RPspnDistritoProv"
        android:layout_width="160dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor7"/>
    <EditText
        android:id="@+id/ga_RPedtContactoProv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor8"/>
    <EditText
        android:id="@+id/ga_RPedtTelefonoProv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <Button
        android:id="@+id/ga_RPbtnAgregarProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_varstrregistrarproveedor9"/>
</LinearLayout>