<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pub_home"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pub_home_str1"/>
    <TextView
        android:id="@+id/txt_pubCodGenerado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="{Código generado}"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pub_home_str2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_home"/>
    <Button
        android:id="@+id/btn_gaVolverH01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_volver_inicio"/>
</LinearLayout>