<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.ui.Mi_Aprendizaje.ap_frg01"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_01_str1" />

    <Button
        android:id="@+id/btn_apCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_01_str2"/>
    <Button
        android:id="@+id/btn_apEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_01_str3"/>

</LinearLayout>