<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/cardMisAnuncios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgVw_imgPrevAnuncio"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@color/grey_400"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_04_str1"/>
        <TextView
            android:id="@+id/txt_titutoMiAnuncioprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{dato}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_04_str2"/>
        <TextView
            android:id="@+id/txt_fechapubMiAnuncioprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{dato}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_04_str3"/>
        <TextView
            android:id="@+id/txt_duracionMiAnuncioprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{dato}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_04_str4"/>
        <TextView
            android:id="@+id/txt_nrovistasMiAnuncioprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{dato}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_04_str5"/>
        <TextView
            android:id="@+id/txt_tasaMiAnuncioprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{dato}"/>

        <Button
            android:id="@+id/btn_verdetalleMiAnuncio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ver"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>