<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tendero.Inicio_sesion.ui.Mi_publicidad.pub_frgmenupublicidad">

    <ImageView
        android:id="@+id/pub_mpimgvwpubdef"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/grey_400" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pub_varstrmenupublicidad1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/pub_mpbtncrearanuncio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_varstrmenupublicidad2" />

        <Button
            android:id="@+id/pub_mpbtnmisanuncios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_varstrmenupublicidad3" />
    </LinearLayout>

</LinearLayout>